--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Math tasks</title>
+    <title>Mosaic Game</title>
   </head>
   <body>
     
