--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
   </head>
   <body>
     
+    <table id="field" border="0">
+    </table>
+    
+    <div id = "results">
+      </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
