--- a/index.html
+++ b/index.html
@@ -16,12 +16,25 @@
       crossorigin="anonymous"
     />
 
+    <!-- Animate -->
+		<link
+		rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+	  />
+
     <link rel="stylesheet" href="style.css" />
 
     <title>Mosaic Game</title>
   </head>
   <body>
     
+    <div class="hp">
+      3
+    </div>
+    <div class="score">
+      0
+    </div>
+
     <table id="field" border="0">
     </table>
     
