--- a/index.html
+++ b/index.html
@@ -28,16 +28,19 @@
   </head>
   <body>
     
-    <div class="hp">
-      3
+    <div class="hp inline-block">
+      Шансів 3
     </div>
-    <div class="score">
-      0
+    <div class="score inline-block">
+      Рівень 0
     </div>
 
     <table id="field" border="0">
     </table>
+
+    <input class="d-block" type="range" min="25" max="65" step="2">
     
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
