heading and fonts

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
     
+    <h1 class="heading">Японський кросворд</h1>
+
     <div class="hp inline-block">
       Шансів 3
     </div>
