--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <h1 class="heading">Японський кросворд</h1>
 
     <div class="hp inline-block">
-      Шансів 3
+      Шансів: 3
     </div>
     <div class="score inline-block">
-      Рівень 0
+      Розгадано мозаїк: 0
     </div>
 
     <table id="field" border="0">
