--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
   </head>
   <body>
     
-    <h1 class="heading">Японський кросворд</h1>
+    <h1 class="heading animate__animated animate__fadeIn">Японський кросворд</h1>
 
-    <div class="hp inline-block">
+    <div class="hp inline-block animate__animated animate__fadeIn">
       Шансів: 3
     </div>
-    <div class="score inline-block">
+    <div class="score inline-block animate__animated animate__fadeIn">
       Розгадано мозаїк: 0
     </div>
 
